--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--title-->
+    <!-- Meta tags for search engines -->
+    <meta name="description" content="Love running. Club for runners in Dublin, Ireland. Urban running, Trail running. Dublin docklands and Phoenix Park">
+    <meta name="keywords" content="love running, run, running club, runners, Dublin, sport, excercise">
+    <!-- title -->
     <title>Love Running</title>
-    <!--favicon-->
+    <!-- favicon -->
       <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
       <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
       <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
