add hover and change colour effect on large screens

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     <label for="nav-toggle" class="nav-toggle-label">X</label>
     <nav>
       <ul id="menu">
-        <li><a href="" class="active"></a>Home</li>
-        <li><a href=""></a>Gallery</li>
-        <li><a href=""></a>Sign Up</li>
+        <li><a href="" class="active">Home</a></li>
+        <li><a href="">Gallery</a></li>
+        <li><a href="">Sign Up</a></li>
       </ul>
     </nav>
     </header>
@@ -38,3 +38,4 @@
   </body> 
 
 </html>
+
