--- a/index.html
+++ b/index.html
@@ -34,7 +34,16 @@
     <!-- Main content -->
     <main>Main Content</main>
     <!-- Footer -->
-    <footer>Footer</footer>
+    <footer>
+      <ul>
+        <li><a href="https:www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in new tab)"><i class="fa-brands fa-facebook"></i></a></li>
+        <li><a href="https:www.youtube.com/" target="_blank" rel="noopener" aria-label="Visit our Youtube page (opens in new tab)"><i class="fa-brands fa-youtube"></i></a></li>
+        <li><a href="https:www.x.com/" target="_blank" rel="noopener" aria-label="Visit our X page (opens in new tab)"><i class="fa-brands fa-x-twitter"></i></a></li>
+      </ul>
+    </footer>
+
+    <!-- Font Awesome kit-->
+    <script src="https://kit.fontawesome.com/69a263b9cb.js" crossorigin="anonymous"></script>
   </body> 
 
 </html>
