--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <main>Main Content</main>
     <!-- Footer -->
     <footer>
-      <ul>
+      <ul id="social-networks">
         <li><a href="https:www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in new tab)"><i class="fa-brands fa-facebook"></i></a></li>
         <li><a href="https:www.youtube.com/" target="_blank" rel="noopener" aria-label="Visit our Youtube page (opens in new tab)"><i class="fa-brands fa-youtube"></i></a></li>
         <li><a href="https:www.x.com/" target="_blank" rel="noopener" aria-label="Visit our X page (opens in new tab)"><i class="fa-brands fa-x-twitter"></i></a></li>
