--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
     <!-- Main content -->
     <main>
       <section id="hero"></section>
+      <div id="cover-text">
+        <h2>Love Running</h2>
+        <h3>Dublin docklands & Phoenix Park</h3>
+      </div>
     </main>
     <!-- Footer -->
     <footer>
