--- a/gallery.html
+++ b/gallery.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Meta tags for search engines -->
-    <meta name="description" content="Love running. Club for runners in Dublin, Ireland. Urban running, Trail running. Dublin docklands and Phoenix Park">
-    <meta name="keywords" content="love running, run, running club, runners, Dublin, sport, excercise">
-    <!-- title -->
-    <title>Love Running</title>
-    <!-- favicon -->
-      <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
-      <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
-      <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
-      <!--stylesheet-->
-      <link rel="stylesheet" href="assets/css/style.css">
-  </head>
 
-  <body>
-    <!-- Header -->
-    <header><a href="index.html">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Meta tags for search engines -->
+  <meta name="description"
+    content="Love running. Club for runners in Dublin, Ireland. Urban running, Trail running. Dublin docklands and Phoenix Park">
+  <meta name="keywords" content="love running, run, running club, runners, Dublin, sport, excercise">
+  <!-- title -->
+  <title>Love Running</title>
+  <!-- favicon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+  <!--stylesheet-->
+  <link rel="stylesheet" href="assets/css/style.css">
+</head>
+
+<body>
+  <!-- Header -->
+  <header><a href="index.html">
       <h1 id="logo">Love Running</h1>
     </a>
     <input type="checkbox" id="nav-toggle" name="nav-toggle">
@@ -30,21 +32,37 @@
         <li><a href="signup.html">Sign Up</a></li>
       </ul>
     </nav>
-    </header>
-    <!-- Main content -->
-    <main>Main Content</main>
-    <!-- Footer -->
-    <footer>
-      <ul id="social-networks">
-        <li><a href="https:www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in new tab)"><i class="fa-brands fa-facebook"></i></a></li>
-        <li><a href="https:www.youtube.com/" target="_blank" rel="noopener" aria-label="Visit our Youtube page (opens in new tab)"><i class="fa-brands fa-youtube"></i></a></li>
-        <li><a href="https:www.x.com/" target="_blank" rel="noopener" aria-label="Visit our X page (opens in new tab)"><i class="fa-brands fa-x-twitter"></i></a></li>
-      </ul>
-    </footer>
+  </header>
+  <!-- Main content -->
+  <main>
+    <section id="gallery">
+      <div id="Photos">
+        <img src="assets\images\athletes.webp" alt="Two Athletes running together">
+        <img src="assets/images/girls.webp" alt="Three girls at charity paint running festival">
+        <img src="assets/images/runner3.webp" alt="Solo male runner jogging on beach">
+        <img src="assets/images/man.webp" alt="Man at charity paint running festival">
+        <img src="assets/images/runner1.webp" alt="Solo female runner jogging through Phoenix Park">
+        <img src="assets/images/runner2.webp" alt="Runners competing in marathon">
+        <img src="assets/images/runner4.webp" alt="Solo female runner jogging on beach">
+        <img src="assets/images/running_gang.webp" alt="Large group of runners taking part in a marathon on a rainy day">
+        <img src="assets/images/mud-run.webp" alt="Two women runners taking a muddy selfie after the Mud Runners championship">
+      </div>
+    </section>
+  </main>
+  <!-- Footer -->
+  <footer>
+    <ul id="social-networks">
+      <li><a href="https:www.facebook.com/" target="_blank" rel="noopener"
+          aria-label="Visit our Facebook page (opens in new tab)"><i class="fa-brands fa-facebook"></i></a></li>
+      <li><a href="https:www.youtube.com/" target="_blank" rel="noopener"
+          aria-label="Visit our Youtube page (opens in new tab)"><i class="fa-brands fa-youtube"></i></a></li>
+      <li><a href="https:www.x.com/" target="_blank" rel="noopener" aria-label="Visit our X page (opens in new tab)"><i
+            class="fa-brands fa-x-twitter"></i></a></li>
+    </ul>
+  </footer>
 
-    <!-- Font Awesome kit-->
-    <script src="https://kit.fontawesome.com/69a263b9cb.js" crossorigin="anonymous"></script>
-  </body> 
+  <!-- Font Awesome kit-->
+  <script src="https://kit.fontawesome.com/69a263b9cb.js" crossorigin="anonymous"></script>
+</body>
 
 </html>
-
