--- a/gallery.html
+++ b/gallery.html
@@ -36,7 +36,7 @@
   <!-- Main content -->
   <main>
     <section id="gallery">
-      <div id="Photos">
+      <div id="photos">
         <img src="assets\images\athletes.webp" alt="Two Athletes running together">
         <img src="assets/images/girls.webp" alt="Three girls at charity paint running festival">
         <img src="assets/images/runner3.webp" alt="Solo male runner jogging on beach">
